// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`prism-loader should add a theme 1`] = `
"import Prism from \\"prismjs/components/prism-core.js\\";
import \\"prismjs/themes/prism-dark.css\\";
Prism.highlightAll();
export { Prism };"
`;

exports[`prism-loader should add multiple plugins 1`] = `
"import Prism from \\"prismjs/components/prism-core.js\\";
import \\"prismjs/themes/prism.css\\";
import \\"prismjs/plugins/line-highlight/prism-line-highlight.css\\";
import \\"prismjs/plugins/line-highlight/prism-line-highlight\\";
import \\"prismjs/plugins/line-numbers/prism-line-numbers.css\\";
import \\"prismjs/plugins/line-numbers/prism-line-numbers\\";
Prism.highlightAll();
export { Prism };"
`;
